<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <TextView
        android:id="@+id/tv_lobby_cabezal"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/cabezalLobby"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="306dp"
        android:layout_height="212dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lobby_cabezal">

        <RadioButton
            android:id="@+id/lobby_rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toFechas"
            android:text="@string/rbt_1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/lobby_rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toChofer"
            android:text="@string/rbt_2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/lobby_rbt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toVehiculo"
            android:text="@string/rbt_3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/lobby_rbt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toGestion"
            android:text="@string/rbt_4"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_lobby_close"
        android:layout_width="124dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:onClick="toReturn"
        android:text="@string/SecionClose"
        app:layout_constraintStart_toEndOf="@+id/tv_lobby_cabezal"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>