<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sub_Vehicu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="192dp"
        android:layout_height="37dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="4dp"
        android:text="@string/rbt_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="226dp"
        android:layout_height="146dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toConsulta"
            android:text="@string/sub1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toRegistrar"
            android:text="@string/sub2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toModificar"
            android:text="@string/sub3" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>